# loopd

./: .gitignore  LICENSE  README.ko.md  README.md  README.zh-CN.md
.claude-plugin/: marketplace.json
.github/workflows/: sync-plugin-version.yml
_loopd/task-2026-05-20-001/: architecture.md  plan.md  prd.md
_loopd/task-2026-05-21-001/: architecture.md  plan.md  prd.md
docs/: orchestrator-design.md  orchestrator-planning-layer.md
plugins/loopd/.claude-plugin/: plugin.json
plugins/loopd/agents/: gh-post.md  implementation.md  plan-critic.md  planning.md  research-critic.md  research.md  review.md  solution-critic.md
plugins/loopd/commands/: dev-task.md  list-tasks.md  research-task.md  resume-task.md
plugins/loopd/hooks/: _loopd_hook_lib.py  hooks.json  (+6 more)
plugins/loopd/python_core/: pyproject.toml
plugins/loopd/python_core/loopd_core/: __init__.py  config.py  prompt_renderer.py  session_store.py  tick.py  types.py
plugins/loopd/python_core/loopd_core/agents/: __init__.py  agent_matrix.py  agent_router.py  narrowing.py  permission_matrix.py  pipeline.py
plugins/loopd/python_core/loopd_core/state/: __init__.py  artifact_manager.py  digest_state.py  event_logger.py  execution_recorder.py  lock_manager.py  pipeline_state_machine.py  stage_metrics.py  task_manager.py  workspace_manager.py
plugins/loopd/python_core/scripts/: tick
plugins/loopd/python_core/tests/: conftest.py  test_hooks_isolation.py  test_session_store.py  test_task_manager_concurrent.py  test_tick_session_binding.py  test_workspace_collision.py
plugins/orchestrator/: README.md
(+85 files in other folders)
